Refinamento das Activits

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="br.com.unicid.aplicativodentista">
+    package="br.com.unicid.aplicativodentista" >
 
     <application
         android:allowBackup="true"
@@ -9,15 +9,25 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.NovoUsuarioAcitivity">
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".ui.activity.Agenda"
+            android:label="@string/title_activity_agenda"
+            android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.AcitivityLoginUsuario">
+        <activity android:name=".ui.activity.NovoUsuarioAcitivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ui.activity.AcitivityLoginUsuario" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
