--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="br.com.unicid.aplicativodentista" >
+    package="br.com.unicid.aplicativodentista">
 
     <application
         android:allowBackup="true"
@@ -9,35 +9,29 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name=".ui.activity.AgendaActivity"
-            android:label="@string/title_activity_agenda"
-            android:theme="@style/AppTheme.NoActionBar" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".ui.activity.DadosPaciente"></activity>
+        <!-- LOGIN USUARIO -->
+        <activity android:name=".ui.activity.LoginUsuarioAcitivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity android:name=".ui.activity.LoginUsuarioAcitivity" >
+        </activity> <!-- NOVO USUARIO -->
+        <activity android:name=".ui.activity.NovoUsuarioAcitivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity android:name=".ui.activity.NovoUsuarioAcitivity" >
-
+        </activity> <!-- AGENDA -->
+        <activity android:name=".ui.activity.AgendaActivity">
             <intent-filter>
-
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
         <meta-data
