Orgnaização de Pacotes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="br.com.unicid.aplicativodentista">
 
     <application
@@ -10,28 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.DadosPaciente"></activity>
+
         <!-- LOGIN USUARIO -->
-        <activity android:name=".ui.activity.LoginUsuarioAcitivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+<!--        <activity android:name=".ui.activity.LoginUsuarioAcitivity">-->
+<!--            <action android:name="android.intent.action.MAIN" />-->
+<!--            <category android:name="android.intent.category.LAUNCHER" />-->
+<!--        </activity>-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity> <!-- NOVO USUARIO -->
+        <!-- LOGIN USUARIO -->
         <activity android:name=".ui.activity.NovoUsuarioAcitivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+           <intent-filter>
+               <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity> <!-- AGENDA -->
-        <activity android:name=".ui.activity.AgendaActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+               <category android:name="android.intent.category.LAUNCHER" />
+           </intent-filter>
         </activity>
 
         <meta-data
