--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
 
         <!-- LOGIN USUARIO -->
 <!--        <activity android:name=".ui.activity.LoginUsuarioAcitivity">-->
-<!--            <action android:name="android.intent.action.MAIN" />-->
-<!--            <category android:name="android.intent.category.LAUNCHER" />-->
+<!--           <intent-filter>-->
+<!--               <action android:name="android.intent.action.MAIN" />-->
+<!--               <category android:name="android.intent.category.LAUNCHER" />-->
+<!--           </intent-filter>-->
 <!--        </activity>-->
 
-        <!-- LOGIN USUARIO -->
-        <activity android:name=".ui.activity.NovoUsuarioAcitivity">
+        <!-- USUARIO -->
+        <activity android:name=".ui.activity.UsuarioAcitivity">
            <intent-filter>
                <action android:name="android.intent.action.MAIN" />
 
