Vizualização dos Pacientes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,29 +10,37 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <!-- LOGIN USUARIO -->
-<!--        <activity android:name=".ui.activity.LoginUsuarioAcitivity">-->
-<!--            <action android:name="android.intent.action.MAIN" />-->
-<!--            <category android:name="android.intent.category.LAUNCHER" />-->
-<!--        </activity>-->
-
-        <!-- NOVO USUARIO -->
-<!--        <activity android:name=".ui.activity.UsuarioAcitivity">-->
-<!--           <intent-filter>-->
-<!--               <action android:name="android.intent.action.MAIN" />-->
-
-<!--               <category android:name="android.intent.category.LAUNCHER" />-->
-<!--           </intent-filter>-->
-<!--        </activity>-->
-
-        <!-- NOVO PACIENTE -->
-        <activity android:name=".ui.activity.DadosPacienteActivity">
+<!--        &lt;!&ndash; LISTA USUARIO &ndash;&gt;-->
+        <activity android:name=".ui.activity.ListaPacientesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+<!--        &lt;!&ndash; LOGIN USUARIO &ndash;&gt;-->
+<!--        <activity android:name=".ui.activity.LoginUsuarioAcitivity">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
+
+<!--        &lt;!&ndash; NOVO USUARIO &ndash;&gt;-->
+<!--        <activity android:name=".ui.activity.UsuarioAcitivity">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
+
+        <!-- NOVO PACIENTE -->
+<!--        <activity android:name=".ui.activity.DadosPacienteActivity">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
 
         <meta-data
             android:name="preloaded_fonts"
