--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,13 +34,13 @@
 <!--            </intent-filter>-->
 <!--        </activity>-->
 
-        <!-- NOVO PACIENTE -->
-<!--        <activity android:name=".ui.activity.DadosPacienteActivity">-->
+<!--         NOVO PACIENTE -->
+        <activity android:name=".ui.activity.DadosPacienteActivity">
 <!--            <intent-filter>-->
 <!--                <action android:name="android.intent.action.MAIN" />-->
 <!--                <category android:name="android.intent.category.LAUNCHER" />-->
 <!--            </intent-filter>-->
-<!--        </activity>-->
+        </activity>
 
         <meta-data
             android:name="preloaded_fonts"
