--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".PacienteActivity"
+            android:name=".ui.activity.PacienteActivity"
             android:label="@string/title_activity_paciente"
             android:theme="@style/AppTheme.NoActionBar">
              <intent-filter>
